UserController should be done now